--- a/Continuité.tex
+++ b/Continuité.tex
@@ -83,7 +83,7 @@
 %Remarques {{{1
 \section{Remarques}
 \begin{enumerate}
-	\item En g\'en\'eral, les ferm\'es born\'es sont toujours des segments
+	\item En g\'en\'eral, les ferm\'es born\'es au programme sont toujours des segments
 \end{enumerate}
 
 
