--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -22,7 +22,7 @@
 \section{D\'efinitions}
 \begin{defi}
 	Soit $I$ un intervalle de $\mathbb{R}$, $f:I \rightarrow \mathbb{R},\ x_0 \in I,\ n \in \mathbb{N}$ \\
-	On dira que f admet un DL \`a l'ordre n au voisinage de $x_0$ s'il existe $a_0, \hdots, a_n \in \mathbb{R}$ tel que: \\
+	On dira que f admet un DL \`a l'ordre n au voisinage de $x_0$ s'il existe \mbox{$a_0, \hdots, a_n \in \mathbb{R}$} tel que: \\
 	\[f(x) - (a_0 + a_1(x-x_0) + \hdots + a_n(x-x_0)^n) \underset{x \rightarrow x_0}{=} o((x-x_0)^n)\]
 \end{defi}
 
