--- a/Groupes.tex
+++ b/Groupes.tex
@@ -38,7 +38,7 @@ Soit $E$ un ensemble muni d'une LCI $*$:
 \end{enumerate}
 
 \begin{prop}
-	S'il existe un \'el\'ement neutre il existe un et un seul
+	S'il existe un \'el\'ement neutre il en existe un et un seul
 \end{prop}
 
 \begin{prop} Inversibles dans un mono\"ide
