--- a/Nombres complexes.tex
+++ b/Nombres complexes.tex
@@ -46,7 +46,7 @@ $z,z' \in \mathbb{C}$
 \subsection{Module}
 \begin{defi}
 	Pour $z \in \mathbb{C},\ |z| = \sqrt{z\overline{z}} \in \mathbb{R}_+$ \\
-	$(z\overline{z} = Re^2(z) + Im^2(z))$
+	$(z\overline{z} = |z|^2 = Re^2(z) + Im^2(z))$
 	\begin{rqs}
 		Si $z$ est un r\'eel alors (valeur abs)$|z| = \sqrt{Re^2(z)} = \sqrt{z^2} = |z|$(module)
 	\end{rqs}
@@ -156,6 +156,13 @@ $\Delta = b^2 -4ac$. Soit $\delta$ une racine car\'ee de $\Delta$. Alors $P$ adm
 	\item Cas o\`u l'on conna\^it une \'ecriture trigo int\'eressante: $z = re^{i\theta}$ alors $\sqrt{r}e^{i\frac{\theta}{2}}$
 	\item Cas g\'en\'eral: $z = a + ib$ \\
 		$\omega$ est racine carr\'ee de $z \Leftrightarrow \omega^2 = z \Leftrightarrow \omega^2 = z$ et $|\omega|^2 = |z|$
+\end{enumerate}
+
+%Remarques {{{1
+\section{Remarques}
+\begin{enumerate}
+	\item Penser \`a factoriser par le demi-angle
+	\item Utiliser \'ecriture exponentielle
 \end{enumerate}
 
 \end{document}
