--- a/Polynômes.tex
+++ b/Polynômes.tex
@@ -71,14 +71,14 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 	\end{enumerate}
 \end{defi}
 
-\begin{prop} $ $
+\begin{prop} Soit $P \in K[X]$:
 	\begin{itemize}
-		\item [-] Soit $P \in K[X]$ tel que $\deg P = 1$. Alors $P$ est irr\'eductible dans $K[X]$
-		\item [-] Soit $P \in K[X]$ non constant:
+		\item [-] Si $\deg P = 1$. Alors $P$ est irr\'eductible dans $K[X]$
+		\item [-] Si $P$ est non constant ($\deg P \geq 1$):
 			\begin{align*} P \text{ pas irr\'eductible } &\Leftrightarrow \text{ il existe un diviseur } S \text{ de } P \text{ tel que }
 			 1 \leq \deg S < \deg P \\
 			&\Leftrightarrow P \text{ s'\'ecrit } P = ST \text{ avec } \deg S \geq 1,\ \deg T \geq 1 \end{align*}
-		\item [-] tout $P \in K[X]$ non constant est produit d'irr\'eductibles
+		\item [-] Tout $P \in K[X]$ non constant est produit d'irr\'eductibles
 	\end{itemize}
 \end{prop}
 
@@ -151,6 +151,32 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 
 \begin{prop}
 	Le coefficient de $X^{n-k}$ dans $P = (X+x_1) \hdots (X + x_n)$ est $\sum_{I \in P_k(n)} \prod_{j \in I} x_j$
+\end{prop}
+
+%Dérivation {{{1
+\section{D\'erivation}
+\begin{prop} $ $
+	\begin{enumerate}
+		\item $\deg D^k(P) = \deg P - k$
+		\item $D(\alpha P + Q) = \alpha D(P) + D(Q)$ \\
+			$D(PQ) = P'Q + PQ'$
+		\item $D^k(PQ) = \sum_{i = 0}^k \binom{k}{i}P^{(i)}Q^{(k-i)}$
+	\end{enumerate}
+\end{prop}
+\begin{theo} Taylor
+	\[a \in K,\ P = \sum_k \frac{\tilde{P}^{(k)}(a)}{k!} (X - a)^k\]
+\end{theo}
+
+%Composition {{{1
+\section{Composition}
+\begin{prop} $ $
+	\begin{enumerate}
+		\item $\deg P(Q) = \deg P \times \deg Q$
+		\item $(\alpha P + Q) \circ S = \alpha P \circ S + Q \circ S$ \\
+				$(PQ) \circ S = (P \circ S)(Q \circ S)$
+		\item $(P\circ Q) \circ S = P \circ (Q \circ S)$
+		\item $D(P \circ Q) = D(Q) (D(P) \circ Q)$
+	\end{enumerate}
 \end{prop}
 
 \end{document}
