--- a/Groupes.tex
+++ b/Groupes.tex
@@ -22,8 +22,8 @@
 \begin{document}
 \maketitle
 
-%Généralités sur les lois internes {{{1
-\section{G\'en\'eralit\'es sur les lois internes}
+%Généralités {{{1
+\section{G\'en\'eralit\'es}
 \begin{defi} LCI \\
 Soit $F$ un ensemble. Une loi de composition interne sur $E$ est une application de $E\times E \rightarrow E$
 \end{defi}
@@ -157,8 +157,8 @@ On d\'efinit alors l'ordre par:
 	Par cons\'equent, si $G$ est un groupe fini, $x\in G$ est \'el\'ement de torsion et $o(x)$ divise  $|G|$
 \end{theo}
 
-%Morphismes de groupes {{{1
-\section{Morphismes de groupes}
+%Morphismes de groupe {{{1
+\section{Morphismes de groupe}
 \begin{defi}
 $(G,.),\ (H, *)$ deux groupes, $f: G \rightarrow H$ \\
 On dira que $f$ est un morphisme de groupes si:
